--- a/CinemaInfrastructure/Views/Films/Index.cshtml
+++ b/CinemaInfrastructure/Views/Films/Index.cshtml
@@ -115,7 +115,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
             </div>
             <div class="modal-body">
-                Ви дійсно хочете видалити компанію "<span id="filmName"></span>"?
+                Ви дійсно хочете видалити фільм "<span id="filmName"></span>"?
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Ні</button>
