--- a/CinemaInfrastructure/Views/FilmCategories/Index.cshtml
+++ b/CinemaInfrastructure/Views/FilmCategories/Index.cshtml
@@ -5,23 +5,6 @@
 }
 
 <h1>Категорії фільмів</h1>
-
-@if (TempData["ErrorMessage"] != null)
-{
-    <div class="alert alert-danger alert-dismissible fade show" role="alert">
-        @TempData["ErrorMessage"]
-        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-    </div>
-}
-
-@if (TempData["SuccessMessage"] != null)
-{
-    <div class="alert alert-success alert-dismissible fade show" role="alert">
-        @TempData["SuccessMessage"]
-        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-    </div>
-}
-
 <p>
     <a class="btn btn-primary" asp-action="Create">Створити нову</a>
 </p>
@@ -40,8 +23,8 @@
             </td>
             <td>
                     <a class="btn btn-warning btn-sm" asp-action="Edit" asp-route-id="@item.Id">Редагувати</a>
-                    <a class="btn btn-info btn-sm" asp-action="Details" asp-route-id="@item.Id">Деталі</a>
-                    <button class="btn btn-danger btn-sm" onclick="confirmDelete(@item.Id, '@item.Name')">
+                    <a class="btn btn-info btn-sm" asp-action="Details" asp-route-id="@item.Id">Фільми</a>
+                    <button class="btn btn-danger btn-sm" onclick="confirmDelete('@Url.Action("Delete", "FilmCategories", new { id = item.Id })', '@item.Name', 'категорію')">
                         Видалити
                     </button>
             </td>
@@ -49,34 +32,3 @@
 }
     </tbody>
 </table>
-
-<!-- Модальне вікно -->
-<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="deleteModalLabel">Підтвердження видалення</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-            </div>
-            <div class="modal-body">
-                Ви дійсно хочете видалити категорію "<span id="categoryName"></span>"?
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Ні</button>
-                <form id="deleteForm" method="post">
-                    <button type="submit" class="btn btn-danger">Так, видалити</button>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
-
-<script>
-    function confirmDelete(categoryId, cartegoryName)
-    {
-        document.getElementById("categoryName").innerText = categoryName;
-        document.getElementById("deleteForm").action = "/FilmCategories/Delete/" + categoryId;
-        var deleteModal = new bootstrap.Modal(document.getElementById('deleteModal'));
-        deleteModal.show();
-    }
-</script>
