--- a/CinemaInfrastructure/Views/Halls/Index.cshtml
+++ b/CinemaInfrastructure/Views/Halls/Index.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
+
 <h1>Зали</h1>
 
 <p>
@@ -43,10 +44,12 @@
                 @Html.DisplayFor(modelItem => item.HallType.Name)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="DetailsBySeats" asp-route-id="@item.Id">DetailsBySeats</a> |
-                <a asp-action="DetailsBySessions" asp-route-id="@item.Id">DetailsBySessions</a>|
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a class="btn btn-warning btn-sm" asp-action="Edit" asp-route-id="@item.Id">Редагувати</a>
+                <a class="btn btn-info btn-sm" asp-action="DetailsBySeats" asp-route-id="@item.Id">Місця</a>
+                <a class="btn btn-info btn-sm" asp-action="DetailsBySessions" asp-route-id="@item.Id">Сеанси</a>
+                <button class="btn btn-danger btn-sm" onclick="confirmDelete('@Url.Action("Delete", "Halls", new { id = item.Id })', '@item.Name', 'тип залу')">
+                     Видалити
+                </button>
             </td>
         </tr>
 }
