delete місце, layout прибрала лапки від назви в success message

--- a/CinemaInfrastructure/Views/Shared/_Layout.cshtml
+++ b/CinemaInfrastructure/Views/Shared/_Layout.cshtml
@@ -100,7 +100,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body">
-                    <span id="deleteMessage"></span> "<span id="itemName"></span>"?
+                    <span id="deleteMessage"></span> <span id="itemName"></span>?
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Ні</button>
