--- a/CinemaInfrastructure/Views/Seats/Index.cshtml
+++ b/CinemaInfrastructure/Views/Seats/Index.cshtml
@@ -7,21 +7,15 @@
 <h1>Місця</h1>
 
 <p>
-    <a asp-action="Create">Створити нове</a>
+    <a class="btn btn-primary" asp-action="Create">Створити новий</a>
 </p>
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Row)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.NumberInRow)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Hall)
-            </th>
-            <th></th>
+            <th>Ряд</th>
+            <th>Місце</th>
+            <th>Зал</th>
+            <th>Дії</th>
         </tr>
     </thead>
     <tbody>
@@ -37,10 +31,11 @@
                 @Html.DisplayFor(modelItem => item.Hall.Name)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="DetailsByBookings" asp-route-id="@item.Id">DetailsByBookings</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a class="btn btn-warning btn-sm" asp-action="Edit" asp-route-id="@item.Id">Редагувати</a>
+                <a class="btn btn-info btn-sm" asp-action="DetailsByBookings" asp-route-id="@item.Id">Бронювання</a>
+                    <button class="btn btn-danger btn-sm" onclick="confirmDelete('@Url.Action("Delete", "Seats", new { id = item.Id })', 'ряду @item.Row', 'місце @item.NumberInRow')">
+                    Видалити
+                </button>
             </td>
         </tr>
 }
