--- a/CinemaInfrastructure/Views/FilmRatings/Index.cshtml
+++ b/CinemaInfrastructure/Views/FilmRatings/Index.cshtml
@@ -7,29 +7,20 @@
 <h1>Оцінки</h1>
 
 <p>
-    <a asp-action="Create">Створити нову</a>
+    <a class="btn btn-primary" asp-action="Create">Створити нову</a>
 </p>
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Rating)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Film)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Viewer)
-            </th>
-            <th></th>
+            <th>Назва фільму</th>
+            <th>Користувач</th>
+            <th>Оцінка</th>
+            <th>Дії</th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Rating)
-            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Film.Name)
             </td>
@@ -37,9 +28,12 @@
                 @Html.DisplayFor(modelItem => item.Viewer.Name)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                @Html.DisplayFor(modelItem => item.Rating)
+            </td>
+            <td>
+                <button class="btn btn-danger btn-sm" onclick="confirmDelete('@Url.Action("Delete", "FilmRatings", new { id = item.Id })', 'користувача @item.Viewer.Name для фільму @item.Film.Name', 'відгук')">
+                    Видалити
+                </button>
             </td>
         </tr>
 }
