--- a/CinemaInfrastructure/Views/Viewers/Index.cshtml
+++ b/CinemaInfrastructure/Views/Viewers/Index.cshtml
@@ -7,18 +7,14 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-primary" asp-action="Create">Створити нового</a>
 </p>
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DateOfBirth)
-            </th>
-            <th></th>
+            <th>Ім'я</th>
+            <th>Дата народження</th>
+            <th>Дії</th>
         </tr>
     </thead>
     <tbody>
@@ -31,11 +27,10 @@
                 @Html.DisplayFor(modelItem => item.DateOfBirth)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="DetailsByRatings" asp-route-id="@item.Id">DetailsByRatings</a> |
-                <a asp-action="DetailsByBookings" asp-route-id="@item.Id">DetailsByBookings</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a class="btn btn-warning btn-sm" asp-action="Edit" asp-route-id="@item.Id">Редагувати</a>
+                <a class="btn btn-info btn-sm" asp-action="Details" asp-route-id="@item.Id">Деталі</a>
+                <a class="btn btn-info btn-sm" asp-action="DetailsByRatings" asp-route-id="@item.Id">Залишені відгуки</a>
+                <a class="btn btn-info btn-sm" asp-action="DetailsByBookings" asp-route-id="@item.Id">Бронювання</a>
             </td>
         </tr>
 }
