--- a/CinemaInfrastructure/Views/Bookings/Create.cshtml
+++ b/CinemaInfrastructure/Views/Bookings/Create.cshtml
@@ -46,6 +46,10 @@
     </div>
     <input type="submit" value="Створити" class="btn btn-primary" />
 </form>
+<div>
+    <a asp-action="Index">Назад</a>
+</div>
+
 
 @section Scripts {
     <script>
