--- a/CinemaInfrastructure/Views/Bookings/Details.cshtml
+++ b/CinemaInfrastructure/Views/Bookings/Details.cshtml
@@ -7,7 +7,7 @@
 <h1>Детально</h1>
 
 <div>
-    <h4>бронювання</h4>
+    <h4>Бронювання</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
