--- a/CinemaInfrastructure/Views/Bookings/Edit.cshtml
+++ b/CinemaInfrastructure/Views/Bookings/Edit.cshtml
@@ -47,12 +47,12 @@
 
     <button type="submit" class="btn btn-primary">Зберегти</button>
 </form>
+        <div>
+            <a asp-action="Index">Назад</a>
+        </div>
+
     </div>
 </div>
-
-
-<a asp-action="Index">Назад</a>
-
 
 @section Scripts {
     <script>
