--- a/CinemaInfrastructure/Views/Bookings/Index.cshtml
+++ b/CinemaInfrastructure/Views/Bookings/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Бронювання</h1>
 
 <p>
-    <a asp-action="Create">Створити нове</a>
+    <a class="btn btn-primary" asp-action="Create">Створити нове</a>
 </p>
 <table class="table">
     <thead>
@@ -17,7 +17,7 @@
             <th>Ряд</th>
             <th>Місце</th>
             <th>Глядач</th>
-            <th></th>
+            <th>Дії</th>
         </tr>
     </thead>
     <tbody>
@@ -30,24 +30,23 @@
                 <td>@Html.DisplayFor(modelItem => item.Seat.NumberInRow)</td>
                 <td>@Html.DisplayFor(modelItem => item.Viewer.Name)</td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new
-                        {
-                            viewerId = item.ViewerId,
-                            sessionId = item.SessionId,
-                            seatId = item.SeatId
-                        }) |
-                    @Html.ActionLink("Details", "Details", new
-                        {
-                            viewerId = item.ViewerId,
-                            sessionId = item.SessionId,
-                            seatId = item.SeatId
-                        }) |
-                    @Html.ActionLink("Delete", "Delete", new
-                        {
-                            viewerId = item.ViewerId,
-                            sessionId = item.SessionId,
-                            seatId = item.SeatId
-                        })
+                    <a class="btn btn-warning btn-sm"
+                       asp-action="Edit"
+                       asp-route-viewerId="@item.ViewerId"
+                       asp-route-sessionId="@item.SessionId"
+                       asp-route-seatId="@item.SeatId">
+                        Редагувати
+                    </a>
+                    <a class="btn btn-info btn-sm"
+                       asp-action="Details"
+                       asp-route-viewerId="@item.ViewerId"
+                       asp-route-sessionId="@item.SessionId"
+                       asp-route-seatId="@item.SeatId">
+                        Деталі
+                    </a>
+                    <button class="btn btn-danger btn-sm" onclick="confirmDelete('@Url.Action("Delete", "Bookings", new { viewerId = item.ViewerId, sessionId = item.SessionId, seatId = item.SeatId})', 'користувача @item.Viewer.Name на фільм @item.Session.Film.Name', 'бронювання')">
+                        Видалити
+                    </button>
                 </td>
             </tr>
         }
