halls data validation

--- a/CinemaInfrastructure/Views/Halls/Index.cshtml
+++ b/CinemaInfrastructure/Views/Halls/Index.cshtml
@@ -13,19 +13,11 @@
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.NumberOfRows)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.SeatsInRow)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.HallType)
-            </th>
-            <th></th>
+            <th>Назва </th>
+            <th>Кількість рядів</th>
+            <th>Кількість місць в ряду</th>
+            <th>Тип залу</th>
+            <th>Дії</th>
         </tr>
     </thead>
     <tbody>
