hall type data validation

--- a/CinemaInfrastructure/Views/Halls/Index.cshtml
+++ b/CinemaInfrastructure/Views/Halls/Index.cshtml
@@ -8,7 +8,7 @@
 <h1>Зали</h1>
 
 <p>
-    <a asp-action="Create">сворити новий</a>
+    <a class="btn btn-primary" asp-action="Create">Створити новий</a>
 </p>
 <table class="table">
     <thead>
