--- a/CinemaInfrastructure/Views/Halls/Create.cshtml
+++ b/CinemaInfrastructure/Views/Halls/Create.cshtml
@@ -13,22 +13,22 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+                <label asp-for="Name" class="control-label">Назва</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="NumberOfRows" class="control-label"></label>
+                <label asp-for="NumberOfRows" class="control-label">Кількість рядів</label>
                 <input asp-for="NumberOfRows" class="form-control" />
                 <span asp-validation-for="NumberOfRows" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SeatsInRow" class="control-label"></label>
+                <label asp-for="SeatsInRow" class="control-label">Кількість місць в ряду</label>
                 <input asp-for="SeatsInRow" class="form-control" />
                 <span asp-validation-for="SeatsInRow" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="HallTypeId" class="control-label"></label>
+                <label asp-for="HallTypeId" class="control-label">Зал</label>
                 <select asp-for="HallTypeId" class ="form-control" asp-items="ViewBag.HallTypeId"></select>
             </div>
             <div class="form-group">
