--- a/CinemaInfrastructure/Views/Viewers/Index.cshtml
+++ b/CinemaInfrastructure/Views/Viewers/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Глячі</h1>
 
 <p>
     <a class="btn btn-primary" asp-action="Create">Створити нового</a>
