--- a/CinemaInfrastructure/Views/Films/Create.cshtml
+++ b/CinemaInfrastructure/Views/Films/Create.cshtml
@@ -24,17 +24,12 @@
 
             <div class="form-group">
                 <label asp-for="CompanyId" class="control-label"></label>
-                <!-- Зверніть увагу, що asp-items отримує SelectList -->
-                <select asp-for="CompanyId" class="form-control"
-                        asp-items="@(ViewBag.CompanyId as SelectList)"></select>
-                <span asp-validation-for="CompanyId" class="text-danger"></span>
+                <select asp-for="CompanyId" class="form-control" asp-items="ViewBag.CompanyId"></select>
             </div>
 
             <div class="form-group">
                 <label asp-for="FilmCategoryId" class="control-label"></label>
-                <select asp-for="FilmCategoryId" class="form-control"
-                        asp-items="@(ViewBag.FilmCategoryId as SelectList)"></select>
-                <span asp-validation-for="FilmCategoryId" class="text-danger"></span>
+                <select asp-for="FilmCategoryId" class="form-control" asp-items="ViewBag.FilmCategoryId"></select>
             </div>
 
             <div class="form-group">
